Trying to fix mobile overflow

--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ main {
     margin-inline-start: 6rem;
 }
 h1 {
-    font-size: clamp(2.8rem, 12vw, 3.8rem);
+    font-size: clamp(2.6rem, 10vw, 3.8rem);
     font-weight: 600;
     line-height: 1.3;
 }
@@ -345,7 +345,7 @@ section button{
     top: 8%;
     border-radius: 4px;
     padding: .7rem 1.2rem;
-    width: 19rem;
+    max-width: 30ch;
     background-color: var(--accent-color);
     color: white;
     z-index: 10;
@@ -771,7 +771,7 @@ section button{
     .client-name {
         bottom: 35%;
         left: 50%;
-        width: 40%;
+        max-width: 20ch;
     }
     .laptop-wraper-mobile{
         margin-top: 7.5rem;
